Updates fro authorization, added contact and interest list
