# server/global/messages.js
@@ -1,0 +1,14 @@
+module.exports = {
+    USER_UNAUTHORIZED : "User not authorized",
+    INVALID_TOKEN : "Invalid token",
+    UNEXPECTED_ERROR: "An unexpected error has occured",
+    USER_NOT_FOUND: "User data not found",
+    USER_NOT_ACTIVE: "User not active",
+    PHONE_PASSWORD_INCORRECT : "Phone No. or Password is not correct. Please try again",
+    REQUIRED_FIELDS_MISSING: "Required fields missing",
+    NUMBER_EXIST:"Number already exist",
+    USER_REGISTERED: 'User registered successfully',
+    MESSAGE_RECIEVED: "Message received successfully",
+    INTEREST_SENT: "Intreset sent successfully",
+    INTEREST_ALREADY_SENT: "Interest already sent"
+}
